terraform/modules/aws/network/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(var.common_tags, {
    Name = format("%s-%s-vpc", var.name, terraform.workspace)
  })
}
